<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_general_setting"
        android:layout_marginTop="100dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
           >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/buttonTransactionSetting"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/border_button_handle_modal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                >
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_sliders_solid"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/buttonLanguageSetting"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/border_button_handle_modal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonTransactionSetting"
                android:gravity="center"
                android:layout_marginStart="10dp"
                >
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_baseline_settings_24"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <LinearLayout
                    android:layout_width="36dp"
                    android:layout_height="8dp"
                    android:rotation="130"
                    android:background="@drawable/horizontal_line_gradient"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <LinearLayout
                    android:layout_width="36dp"
                    android:layout_height="8dp"
                    android:rotation="50"
                    android:background="@drawable/horizontal_line_gradient"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/imageChainWallet"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_dollar_image"
                app:layout_constraintTop_toBottomOf="@+id/buttonTransactionSetting"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/addressWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_wallet"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/imageChainWallet"
                app:layout_constraintTop_toTopOf="@+id/imageChainWallet"
                app:layout_constraintBottom_toBottomOf="@+id/imageChainWallet"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/textSwap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swap"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageChainWallet"/>


            <TextView
                android:id="@+id/textFarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farm"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSwap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beta"
                android:textColor="@color/pink"
                android:textSize="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@+id/textFarm"
                app:layout_constraintTop_toTopOf="@+id/textFarm"
                app:layout_constraintBottom_toBottomOf="@+id/textFarm"/>

            <TextView
                android:id="@+id/textBridge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bridge"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFarm"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beta"
                android:textColor="@color/pink"
                android:textSize="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@+id/textBridge"
                app:layout_constraintTop_toTopOf="@+id/textBridge"
                app:layout_constraintBottom_toBottomOf="@+id/textBridge"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

</layout>