<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/textTitleModal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_token"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/buttonBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/border_button_handle_modal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            >
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
        </androidx.appcompat.widget.LinearLayoutCompat>



        <EditText
            android:id="@+id/editTextDownloadList"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_button_handle_modal"
            android:hint="@string/text_url_input"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitleModal" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainConstraintListImport"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_token_list_card"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextDownloadList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/imageListToken"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_bnb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/nameTokenList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="CoinMarketCap"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/imageListToken"
                app:layout_constraintTop_toTopOf="@+id/imageListToken"/>


            <TextView
                android:id="@+id/textCountToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="1020 Tokens "
                android:textSize="12dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/imageListToken"
                app:layout_constraintTop_toBottomOf="@+id/nameTokenList"/>


            <LinearLayout
                android:id="@+id/buttonImported"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/background_button_import"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imported_button"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonImport"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/background_button_import"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_button"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewTokenList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainConstraintListImport"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>