<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainConstraint">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/logo_blm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/layoutMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="36dp"
                        android:layout_height="8dp"
                        android:background="@drawable/horizontal_line_gradient"></LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/menu"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="36dp"
                        android:layout_height="8dp"
                        android:background="@drawable/horizontal_line_gradient"></LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/nameApplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/blm_swap"
                android:textColor="@color/white"
                android:textSize="42dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerConstraint" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/informationFirstTokenConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameApplication">


                <TextView
                    android:id="@+id/nameFirstTokenSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:textColor="@color/white"
                    android:textSize="42dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/firstEditTextCountToken"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    app:layout_constraintBottom_toTopOf="@+id/firstEditTextCountToken"
                    app:layout_constraintStart_toEndOf="@+id/nameFirstTokenSelect"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="@color/light_white"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/firstEditTextCountToken"
                    app:layout_constraintEnd_toEndOf="parent" />
                <EditText
                    android:id="@+id/firstEditTextCountToken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_text_view"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameFirstTokenSelect" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageReverse"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_image_arrow_reverse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informationFirstTokenConstraint" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/informationSecondTokenConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageReverse">


                <TextView
                    android:id="@+id/nameSecondTokenSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:textColor="@color/white"
                    android:textSize="42dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/secondEditTextCountToken"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    app:layout_constraintBottom_toTopOf="@+id/secondEditTextCountToken"
                    app:layout_constraintStart_toEndOf="@+id/nameSecondTokenSelect"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="@color/light_white"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/secondEditTextCountToken"
                    app:layout_constraintEnd_toEndOf="parent" />
                <EditText
                    android:id="@+id/secondEditTextCountToken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_text_view"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameSecondTokenSelect" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/informationSecondTokenConstraint">


                <ImageView
                    android:id="@+id/imageFirstToken"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_dollar_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textConnectWallet"/>

                <ImageView
                    android:id="@+id/imageSecondToken"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_dollar_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textConnectWallet"/>



                <TextView
                    android:id="@+id/textConnectWallet"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_wallet"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:translationZ="1dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageAstronaut"
                    app:layout_constraintEnd_toEndOf="@+id/imageAstronaut"
                    />



                <ImageView
                    android:id="@+id/imageAstronaut"
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_plant_astronaut"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>